fix one more scrollbar oddity with search results
git-svn-id: file:///home/awy/mirror/slim/trunk/server@12855 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -97,6 +97,10 @@ div.thumbwrap {
 	overflow: auto;
 }
 
+#searchMenu #browsedbList {
+	overflow: visible;
+}
+
 .playlistSongDetail, .browseItemDetail {
 	padding-left: 70px;
 }
